style.css
/* tags */
/* these were designed to correspond to the different sections of the document */
/* there should be a container/body, a header, a left nav, a right nav, and a footer */

body {
  background: #b6b7bc;
  width: 900px;
  margin-left: auto;
  margin-right: auto;
  background-color: #b6b7bc;
  text-align: center;
}
.header {
  width: 900px;
  height: 75px;
  position: relative; /*	background-image: url(images/muslim1.jpg);*/;
  background: #4b6c9e;
  border-bottom: 2px solid #000000;
  /*background-color:darkolivegreen;*/text-shadow: 2px 2px #FF0000;
  /*	background-color: #F8AA3C; */
}
.header a {
  color: #0000ff;
  text-decoration: underline;
  font-weight: bold;
  font-family: Verdana;
  font-size: 14px;
}
.header a:visited {
  color: #ff00ff;
  text-decoration: underline;
  font-weight: bold;
}
.header a:hover {
  color: #ff0000;
  text-decoration: none;
  font-weight: bold;
}
.header p {
  color: #000000;
  font-family: Arial;
  font-weight: bold;
}
.footer .HorizLinks {
  position: relative;
  top: 3px;
}
.footer .HorizLinks ul {
  margin: 0px auto;
  width: 600px;
}
/* classes */
.footer .HorizLinks li {
  margin: 0;
  list-style-type: none;
  width: 150px;
  float: left;
}
.HorizLinks li:hover {
  background-color: black;
  color: #4b6c9e;
}
#horizontalnav {
  width: 900px;
  height: 30px;
  position: relative;
  background-color: #3a4f63; /*	background-color: #F2D6AF; */;
  border-bottom: 2px solid #000000;
}
.navlinks {
  position: relative;
}
.navlinks ul {
  width: 600px;
  margin: 0 auto;
}
.navlinks li {
  margin: 6px auto;
  padding: 0;
  list-style-type: none;
  display: inline;
  width: 150px;
  float: left;
  text-align:center;
}
.navlinks li a {
  color: #000000;
  padding: 6px 10px;
  text-decoration: none;
  font-size: 16px;
  font-family: Verdana;
  text-align: center;
  width: 140px;
}
.navlinks li a:hover {
  color: #ff00ff;
  background-color: #00ff00; /* could be a bitmap; use background-image if you want a bitmap */;
  border: 1px #000 solid;
}
.smalltext {
  font-size: 9px;
  font-family: Arial;
}
#leftnav {
  float: left;
  width: 140px;
  height: 400px;
  background-color: black;
  color: aqua; /*	background-color: #F8AA3C; */;
  border-right: 1px white solid;
}
#rightnav {
  float: right;
  width: 140px;
  height: 400px;
  background-color: black;
  color: aqua; /*	background-color: #F8AA3C; */;
  border-left: 1px white solid;
}
.body {
  margin: auto;
  width: 600px;
  height: 400px;
  background-color: #b6b7bc;
  position: relative;
}
.footer {
  height: 30px;
  border-top: 2px solid white;
  clear: both;
  background: #4b6c9e;
  /*	background-color:darkolivegreen; */
  /*	background-color: #D1C0A7; */
}
.box {
  margin-top: 10px;
  padding: 5px;
  /* t r b l */background-color: #dddddd;
  border: 2px solid #d22929;
  width: 350px;
  color: #000000;
}
h2 {
  font-size: 20px;
  color: white;
  padding: 10px;
  /* when you give only one padding value, it will apply to all sides */
  font-family: Verdana, Helvetica, sans-serif;
}

